Fix tests + location